[package]
name = "learn-rust-api"
version = "0.1.0"
authors = ["Haardik <hhaardik@uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
parking_lot = "0.11.0"
serde = { version = "1.0.115", features = ["derive"] }
tokio = { version = "0.2.22", features = ["macros"] }